# soroban-decidable-verification

./: .gitmodules  Cargo.toml  LICENSE  README.md
docker/: build  mkimage  run
docker/ar/: Dockerfile
docker/base/: Dockerfile
docker/solvers/: Dockerfile
docker/spectools/: Dockerfile
docker/verifiers/: Dockerfile
experiments/deep_contract_auth/: Cargo.toml  README.md
experiments/deep_contract_auth/src/: lib.rs  test.rs
models/: integers.ivy  liquidity.ivy  liquidity_contract.ivy  mini_token.ivy  partial_map.ivy  simplified_token.ivy  soroban.ivy  soroban.md  soroban_tests.ivy  suzuki_kasami.ivy  suzuki_kasami_manual.pyv  token.ivy  token.md  token_contract.ivy  total_order.ivy  toy_consensus.ivy
models/simplified/: integer.ivy  maps.ivy  maps_no_save.ivy  pool.ivy  pool_token.ivy  token.ivy
