[workspace]
resolver = "2"

members = [
    "experiments/deep_contract_auth",
    "soroban-examples/cross_contract/contract_a",
    "soroban-examples/cross_contract/contract_b",
    "soroban-examples/deep_contract_auth",
    "soroban-examples/fuzzing",
    "soroban-examples/timelock",
    "soroban-examples/token",
    "rs-soroban-env/soroban-env-host",
    "rs-soroban-env/soroban-env-guest",
    "rs-soroban-env/soroban-env-common",
    # "rs-soroban-env/soroban-env-common/tests/no_std",
    "rs-soroban-env/soroban-env-macros",
    "rs-soroban-env/soroban-native-sdk-macros",
    "rs-soroban-env/soroban-test-wasms",
    "rs-soroban-env/soroban-synth-wasm",
    "rs-soroban-env/soroban-bench-utils",
]

exclude = ["rs-soroban-env/soroban-test-wasms/wasm-workspace"]


[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.package]
version = "20.0.0-rc2"

[workspace.dependencies]
soroban-env-common = { version = "20.0.0-rc2", path = "rs-soroban-env/soroban-env-common", default-features = false }
soroban-env-guest = { version = "20.0.0-rc2", path = "rs-soroban-env/soroban-env-guest" }
soroban-env-host = { version = "20.0.0-rc2", path = "rs-soroban-env/soroban-env-host" }
soroban-env-macros = { version = "20.0.0-rc2", path = "rs-soroban-env/soroban-env-macros" }
soroban-native-sdk-macros = { version = "20.0.0-rc2", path = "rs-soroban-env/soroban-native-sdk-macros" }

[workspace.dependencies.stellar-xdr]
version = "20.0.0-rc1"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "c9d24eb4fae1f9968f6620e06750c1fce7a5d6c3"
default-features = false

[workspace.dependencies.wasmi]
package = "soroban-wasmi"
version = "0.31.0-soroban1"
git = "https://github.com/stellar/wasmi"
rev = "7e63b4c9e08c4163f417d118d81f7ea34789d0be"

[workspace.dependencies.stellar-strkey]
version = "0.0.7"
git = "https://github.com/stellar/rs-stellar-strkey"
rev = "e6ba45c60c16de28c7522586b80ed0150157df73"
